Resolves: tdf#159879 Crash when closing "3D View" dialog

Change-Id: I9c116007afe9cea97b597933ad8483dce25c3707
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164274
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>